Changelog:
0.111 (Bug fixes release)
- Added an option for RAM initialization (#276).
  It's possible to choose between three values:
  * 0x00
  * 0xFF (default)
  * Randomize.
- Rewritten mapper 19 (#276).
- Fixed mapper : 30, 111, 95, 154, 344, 406.
- Windows x86_64: Update to Qt5 5.15.8 (#279).
- Fixed map of one keyboard button to multiple controllers (#277).

0.110
- Added support to Wayland.
- Added support for "Fullscreen in window" with Wayland (the only type of fullscreen supported for now).
- Added iNES/NES 2.0 header editor.
- Added support for "Family Basic Keyboard" and "Subor Keyboard".
  * It's possible to capture and release keyboard input with the shortcut "Scrollock" and open and
    close a virtual keyboard with "CTRL+X".
  * Implemented the "Paste" function. It's possible to paste the text by dragging it in the main
    window of the emulator or copying it and then press the right mouse button and selecting "Paste".
    The text will be inserted through the simulation of the pressure of the keys and it will always
    be possible to interrupt the insertion by pressing the ESC key. During the paste, the Fast Forwarding
    will be active to reduce the waiting time.
  * Added support for the tape data recorder. Added a "Tape" submenu in the "NES" menu, also the same
    menu is present in the context menu of the main window (right click) when the Keyboard is in use.
    By default I use my own format for tape images but you can also save and load tape images
    in Virtuanes and Nestopia format.
- Added a shortcut "M" to simulate a shout in the microphone of the second controller.
- Renamed "Fast Forward" shortcut to "Toggle Fast Forward" and added a new "Fast Forward (hold button)" shortcut.
- Added a Wizard to select the operating mode (portable mode or not) the first time the emulator is run.
  (Info for those who already used the emulator) To run in portable mode there are 3 distinct ways: