@@ -111,7 +111,7 @@ To see a list of available command-line options, start puNES with the `-h` argum
 |     |     | 409 | 410 | 411 | 412 | 413 | 414 | 415 | 416 | 417 |
 |     |     | 420 |     | 422 |     |     |     |     |     | 428 |
 | 429 |     | 431 | 432 | 433 | 434 |     | 436 | 437 | 438 |     |
-|     |     | 442 |     |     |     |     | 447 |     |     |     |
+|     |     | 442 |     |     |     | 446 | 447 |     |     |     |
 | 451 | 452 |     |     | 455 | 456 | 457 |     |     |     |     |
 |     |     |     |     |     |     |     |     |     |     |     |
 |     |     |     |     |     |     |     |     |     |     |     |
