@@ -7,6 +7,7 @@ Changelog:
   * Randomize.
 - Rewritten mapper 19 (#276).
 - Fixed mapper : 30, 111, 95, 154, 344, 406.
+- Added support to mapper : 446.
 - Windows x86_64: Update to Qt5 5.15.8 (#279).
 - Fixed map of one keyboard button to multiple controllers (#277).
 
